  logrotate can write its status file in a directory that is
  writable by the "noaaport" user.

- Added "Bytes Ranges" header handling capability in tclhttpd, to support
  the IDV catalogs.

- Added support for IDV catalogs to tclhttpd in the form of the
  catalog "extension".

- Added permament archive to the metarfilter (in archive.conf).

- Added hostname to the <head><title> tag in the main index file,
  which is now a tml tamplate file. The same change was made in
  npemwin y npstats.

- Revised the craftinsert script to set the umask before creating the
  subdirectories and the data file in the spool directory (that now
  requires tclx). Needed so that the nbsp cleanup scripts can delete
  the files written in the spool by ldm (under the noaaport group).

- Revised io.c in the gpfilter/c directory to add the the fopen_xxx
  functions. In particular fopen_output locks the output file
  so that it is safe to execute several instances of nbspfile
  in parallel even in append mode and if the output file is the same. 
  nbspfile was updated to use the new functions.

- Revised the various filters that process the satellite files to
  allow them to process the non-goes data files (i.e., they now process
  ther tixyyy files besides tigyyy).

- Added the ability to specify the queue_read_timeout_ms on a per-client
  basis (via the clientoptions string in nbspd.conf).

r4 -
===

- Revised nbspmtr plot scripts and tclhttpd metar functions to
  plot the wind direction as well (suggested by Scott <ssshoema@gmail.com>).
- Added -r and -R options to the nbspmtrplot1 script.
- Text files are filetered through tr in the rstfilter to delete cntrl chars.
- Added -e to nbspsat and nbspsatinfo (to extract the lat-lon parameters).
- Added option(s) to set servername to the wildcard address(es).
- Added "digatmos" as default subdir for the catalog extension
  if no suubdir is specified in the /_catalog url.
- Added the gisfilter.