@@ -9,6 +9,7 @@ set bundleplist(rad_img_default) [list n0r n1r n2r n3r n0z n0v n1v\
 	n0q naq n1q nbq n2q n3q n0u nau n1u nbu n2u n3u];
 
 ## set bundleplist(rad_shp_ak) [list n0r n0z n0q n0u];
+## set bundleplist(rad_shp_gu) [list n0r n0z n0q n0u];
 ## set bundleplist(rad_shp_hi) [list n0r n0z n0q n0u];
 ## set bundleplist(rad_shp_pr) [list n0r n0z n0q n0u];
 ## set bundleplist(rad_shp_south) [list n0r n0z n0q n0u];
@@ -19,6 +20,7 @@ set bundleplist(rad_img_default) [list n0r n1r n2r n3r n0z n0v n1v\
 ## set bundleplist(rad_shp_us) [list n0r n0z n0q n0u];
 
 ## set bundleplist(rad_img_ak) [list n0r n0z n0q n0u];
+## set bundleplist(rad_img_gu) [list n0r n0z n0q n0u];
 ## set bundleplist(rad_img_hi) [list n0r n0z n0q n0u];
 ## set bundleplist(rad_img_pr) [list n0r n0z n0q n0u];
 ## set bundleplist(rad_img_south) [list n0r n0z n0q n0u];
