@@ -6,7 +6,7 @@
 # What will be copied to "enable" but avoiding duplicates (rad_conus
 # includes all conus sites, and "us" includes conus plus ak, hi and pr).
 #
-#RADENABLE = rad_conus.conf rad_ak.conf rad_hi.conf rad_pr.conf
+#RADENABLE = rad_conus.conf rad_ak.conf rad_gu.conf rad_hi.conf rad_pr.conf
 RADENABLE = rad_us.conf
 #SATENABLE = sat_all.conf
 SATENABLE =
